fixing z-index

--- a/src/css/wselect.css
+++ b/src/css/wselect.css
@@ -110,7 +110,7 @@
 {
     display:none;
     position:absolute;
-    z-index:1002; 
+    z-index:1099; 
     text-align: left;
     background-color: white;
     border: solid 1px #CDCDCD;
